--- a/index.html
+++ b/index.html
@@ -5,15 +5,49 @@
 </head>
 <body>
 
+
 <container>
 
 <h1>Waterfall</h1>
 
-<p>Simple, non-compliant layout grid.</p>
+<block row>
+    <col4 m3>
+      <p>Waterfall is a simple CSS layout grid based on fractions.</p>
+    </col4>
+
+    <col4 m3>
+      <p>Waterfall us designed for desktop and mobile and is compatible with Internet Explorer 9 and above.</p>
+    </col4>
+
+    <col4 m3>
+      <p>Waterfall is not standards compliant, because it uses custom HTML tags and attribute.</p>
+    </col4>
+
+    <col4 m1>
+      <p>Waterfall is at version v0.0.</p>
+    </col4>
+</block>
+
+<h2>Responsive Columns</h2>
+
+<xmp>
+  <col4 s1 m3 l2 g4>A</col4>
+  <col4 s2 m6 l4 g4>B</col4>
+  <col4 s2 m3 l8 g4>C</col4>
+  <col4 s1 m6 l8 g4>D</col4>
+</xmp>
+
+<block class="eg">
+  <col4 s1 m3 l2 g4>A</col4>
+  <col4 s2 m6 l4 g4>B</col4>
+  <col4 s2 m3 l8 g4>C</col4>
+  <col4 s1 m6 l8 g4>D</col4>
+</block>
+
 
 <h2>Fractional Columns</h2>
 
-<block>
+<block class="eg">
   <col1>1</col1>
 
   <col2>&frac12;</col2>
@@ -60,11 +94,13 @@
 </block>
 
 
+
+
 <h2>Compounding Fractions</h2>
 
 <h3>Thirds</h3>
 
-<block>
+<block class="eg">
   <col3>&frac13;</col3>
   <col3>&frac13;</col3>
   <col3>&frac13;</col3>
@@ -76,7 +112,7 @@
 
 <h3>Forths</h3>
 
-<block>
+<block class="eg">
   <col4>&frac14;</col4>
   <col4>&frac14;</col4>
   <col4>&frac14;</col4>
@@ -93,7 +129,7 @@
 
 <h3>Fifths</h3>
 
-<block>
+<block class="eg">
   <col5>&frac15;</col5>
   <col5>&frac15;</col5>
   <col5>&frac15;</col5>
@@ -118,7 +154,7 @@
 
 <h3>Sixths</h3>
 
-<block>
+<block class="eg">
   <col6>&frac16;</col6>
   <col6>&frac16;</col6>
   <col6>&frac16;</col6>
@@ -152,7 +188,7 @@
 
 <h3>Sevenths</h3>
 
-<block>
+<block class="eg">
   <col7>1/7</col7>
   <col7>1/7</col7>
   <col7>1/7</col7>
@@ -190,7 +226,7 @@
 
 <h3>Eighths</h3>
 
-<block>
+<block class="eg">
   <col8>&frac18;</col8>
   <col8>&frac18;</col8>
   <col8>&frac18;</col8>
@@ -272,27 +308,43 @@
 
 
 <h3>Rows</h3>
-<block>
+<block class="eg">
   <row>
     <col3>
       <h4>Equal</h4>
-      <p>You can use different-height content...</p>
+      <p>You can use different-content-height...</p>
     </col3>
     <col3>
       <h4>Height</h4>
-      <p>...while maintaining identical-height blocks across multiple columns, using this system, by containing columns in the &lt;row /&gt; tag...</p>
+      <p>...while maintaining identical-block-height across multiple columns, using the &lt;row&gt; tag around a set of &lt;col&gt; tags.</p>
     </col3>
     <col3>
       <h4>Blocks</h4>
-      <p>... so that's decent.</p>
+      <p>So that's decent.</p>
     </col3>
   </row>
 </block>
 
 </container>
 
+
+
+
+  <guide>
+    <container>
+      <block>
+        <row>
+          <col4></col4>
+          <col4></col4>
+          <col4></col4>
+          <col4></col4>
+        </row>
+      </block>
+    </container>
+  </guide>
+
 </body>
 </html>
 
 
-
+<script src="Waterfall.js"></script>
