--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 
 <h1>Waterfall</h1>
 
-<block row>
-    <col4 m3>
+<block row pad>
+    <col4 s1 m4 l8 g1>
       <p>Waterfall is a simple CSS layout grid based on fractions.</p>
     </col4>
 
-    <col4 m3>
+    <col4 s2 m4 l8x7 g1>
       <p>Waterfall us designed for desktop and mobile and is compatible with Internet Explorer 9 and above.</p>
     </col4>
 
-    <col4 m3>
+    <col4 s2 m4 l8x7 g1>
       <p>Waterfall is not standards compliant, because it uses custom HTML tags and attribute.</p>
     </col4>
 
-    <col4 m1>
+    <col4 s1 m4 l8 g1>
       <p>Waterfall is at version v0.0.</p>
     </col4>
 </block>
