Fixed grunt less issue.

--- a/examples/nav-bar-page.html
+++ b/examples/nav-bar-page.html
@@ -4,13 +4,15 @@
 <link rel="stylesheet" href="../waterfall.css" />
 <style>
 col1 {
-  background: #484848
+  background: red;
 }
 </style>
 </head>
 <body>
 
-<col1>Header</col1>
+<col1>
+  <header>Title</header>
+</col1>
 
 <container>
   <block pad>
