--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url="gh-pages/index.html" />
+<meta http-equiv="refresh" content="0; url="https://f1lt3r.github.io/waterfall/gh-pages/index.html" />
